Fix overflow

--- a/src/code.css
+++ b/src/code.css
@@ -213,7 +213,7 @@ pre {
 }
 
 pre.shiki {
-  @apply rounded-lg overflow-x-scroll flex items-center bg-wash dark:bg-gray-900 shadow-lg my-8;
+  @apply rounded-lg flex items-center bg-wash dark:bg-gray-900 shadow-lg my-8;
 }
 pre.shiki:hover .dim {
   opacity: 1;
@@ -263,9 +263,6 @@ pre.twoslash data-lsp:hover::before {
   z-index: 100;
 }
 
-pre .code-container {
-  overflow: auto;
-}
 /* The try button */
 pre .code-container > a {
   position: absolute;
